edited search page for results and no results with correct alignment

--- a/sass/pages/webuild/search.sass
+++ b/sass/pages/webuild/search.sass
@@ -5,3 +5,6 @@
   padding: .2rem
   &:focus
     background-color: lighten($yellow, 10%)
+
+.searchform
+  margin: 1rem 0 0 0
